# melscan

./: .gitignore  Cargo.toml  README.md  components.json  deploy.sh  dev.sh
.github/workflows/: build-and-test.yml
backend/: Cargo.toml  README.md  default-run.sh
backend/src/: backend.rs  crawl.rs  endpoints.rs  globals.rs  graphs.rs  main.rs  raw.rs  robots.txt  utils.rs
backend/src/graphs/: helpers.rs
backend/src/html/: block.rs  homepage.rs  transaction.rs
backend/templates/: block.html  homepage.html  info-bubble.html  pool.html  skeleton.html
docker/: Dockerfile
docker/dev/: Dockerfile  ci.bats  package.json  run.sh
frontend/: .prettierignore  package-lock.json  package.json  pnpm-lock.yaml  svelte.config.js  tsconfig.json  vite.config.js
frontend/src/: app.html  common.js  hooks.server.ts  hooks.ts
frontend/src/components/: BreadCrumbs.svelte  Charts.svelte  CoinDag.svelte  CoinSankey.svelte  GraphPlot.svelte  GraphPlot.svelte.orig  HashSearch.svelte  Row.svelte  TopNav.svelte
frontend/src/components/layercake/: Sankey.svelte
frontend/src/routes/: blocks.svelte  graphdemo.svelte  index.svelte  stats.svelte
frontend/src/routes/address/[covhash]/: index.svelte
frontend/src/routes/blocks/[height]/: index.svelte
frontend/src/routes/blocks/[height]/[txhash]/: explore.svelte  index.svelte  spenders.svelte
frontend/src/routes/blocks/[height]/coins/: [coinid].svelte
frontend/src/routes/blocks/[height]/pools/[left]/[right]/: index.svelte
frontend/src/routes/pools/[denom1]/[denom2]/: index.svelte
frontend/src/routes/pools/[left]/[right]/: index.svelte
frontend/src/utils/: common.ts  page-types.ts  types.ts
src/: indexer.rs  main.rs  raw.rs  tooltips.json  utils.rs
src/html/: block.rs  homepage.rs  mod.rs  pool.rs  transaction.rs
src/utils/: mod.rs
templates/: block.html  homepage.html  pool.html  skeleton.html  transaction.html
templates_mustache/: homepage.html  pool.html  skeleton.html
