[package]
name = "melscan"
version = "0.1.0"
authors = ["nullchinchilla <nullchinchilla@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.16.0"
smol= "1.2.5"
anyhow= "1.0.53"
themelio-stf= "0.9.7"
tmelcrypt= "0.2.4"
themelio-nodeprot= "0.10.10"
structopt= "0.3.26"
once_cell= "1.9.0"
hex= "0.4.3"

tracing-subscriber = "0.2.25"

log= "0.4.14"
tracing= "0.1.29"

askama= { version = "0.11.0", features = ["serde-json"] }

serde={ version = "1.0.136", features = ["derive"] }
num-traits= "0.2.14"
 
futures-util= "0.3.19"
chrono={ version = "0.4.19", features = ["serde"] }
serde_json= "1.0.78"
themelio-bootstrap= "0.5.1"

lazy_static = "1.4.0"
# cached = "0.25.1"
async-trait = "0.1.52"
dashmap = "5.0.0"
themelio-structs = "0.2.0"
