[package]
name = "melscan"
version = "0.1.0"
authors = ["nullchinchilla <nullchinchilla@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.16.0"
smol= "1.2.5"
anyhow= "1.0.56"
themelio-stf= "0.9.15"
tmelcrypt= "0.2.4"
themelio-nodeprot= "0.10.14"
structopt= "0.3.26"
once_cell= "1.10.0"
hex= "0.4.3"

tracing-subscriber = "0.2.25"

log= "0.4.16"
tracing= "0.1.32"

askama= { version = "0.11.1", features = ["serde-json"] }

serde={ version = "1.0.136", features = ["derive"] }
num-traits= "0.2.14"
 
futures-util= "0.3.21"
chrono={ version = "0.4.19", features = ["serde"] }
serde_json= "1.0.79"
themelio-bootstrap= "0.5.2"

lazy_static = "1.4.0"
# cached = "0.25.1"
async-trait = "0.1.53"
dashmap = "5.2.0"
themelio-structs = "0.2.2"
smolscale = "0.3.23"
