[package]
name = "melscan"
version = "0.1.0"
authors = ["nullchinchilla <nullchinchilla@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.16.0"
smol= "1.2.5"
anyhow= "1.0.58"
themelio-stf= "0.11.4"
tmelcrypt= "0.2.4"
themelio-nodeprot= "0.11.5"
structopt= "0.3.26"
once_cell= "1.13.0"
hex= "0.4.3"

tracing-subscriber = "0.2"

log= "0.4.17"
tracing= "0.1.35"

askama= { version = "0.11.1", features = ["serde-json"] }

serde={ version = "1.0.140", features = ["derive"] }
num-traits= "0.2.15"
 
futures-util= "0.3.21"
chrono={ version = "0.4.19", features = ["serde"] }
serde_json= "1.0.82"
themelio-bootstrap= "0.6.1"

lazy_static = "1.4.0"
# cached = "0.25.1"
async-trait = "0.1.56"
dashmap = "5.3.4"
themelio-structs = "0.2.6"
smolscale = "0.3.29"
parking_lot = "0.12.1"
stdcode = "0.1.7"
defmac = "0.2.1"

[dependencies.rusqlite]
version = "0.28.0"
features = ["bundled"]
