[package]
name = "melscan-backend"
version = "0.1.0"
authors = ["nullchinchilla <nullchinchilla@pm.me>", "sshmendez <shane@themelio.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[patch.crates-io]
# this patches the themelio-nodeprot that themelio-bootstrap depends on too
# themelio-nodeprot={path="../../themelio-nodeprot"} 

[dependencies]
# tide = "0.16.0"
smol= "1.3.0"
anyhow= "1.0.69"
# themelio-stf= "0.11.12"
tmelcrypt= "0.2.7"
# themelio-nodeprot= "0.12.0"
melblkidx= "0.7.0"
# melblkidx= { path = "../../melblkidx" }
structopt= "0.3.26"
once_cell= "1.17.1"
hex= "0.4.3"
thread_local= "1.1.7"
warp = "0.3.3"
rweb = "0.15.0"
tokio = "1.25.0"

tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

log= "0.4.17"
tracing= "0.1.37"

# askama= { version = "0.11.1", features = ["serde-json"] }

serde={ version = "1.0.152", features = ["derive"] }
num-traits= "0.2.15"
 
futures-util= "0.3.26"
chrono={ version = "0.4.23", features = ["serde"] }
serde_json= "1.0.93"
# themelio-bootstrap= "0.7.2"
# themelio-bootstrap= { path = "../../themelio-bootstrap" }

lazy_static = "1.4.0"
# cached = "0.25.1"
async-trait = "0.1.64"
dashmap = "5.4.0"
# themelio-structs = "0.2.10"
smolscale = "0.3.52"
parking_lot = "0.12.1"
stdcode = "0.1.14"
defmac = "0.2.1"
env_logger = "0.10.0"
itertools = "0.10.5"
serde_with = "1"
moka = "0.10.0"
tap = "1.0.1"
melnet2 = "0.3.1"
melprot = "0.13.0"
melstructs = "0.3.2"
melvm = "0.1.0"
melstf = "0.12.0"
melbootstrap = "0.8.1"

[dependencies.rusqlite]
version = "0.28.0"
features = ["bundled"]

